objects/Syndication__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <formula>End_Date__c &gt;=  TODAY() &amp;&amp;
Start_Date__c &lt;= TODAY()</formula>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show__c</fullName>
        <label>Show</label>
        <referenceTo>Show__c</referenceTo>
        <relationshipLabel>Syndications</relationshipLabel>
        <relationshipName>Syndications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscriber_Station_Network__c</fullName>
        <label>Subscriber Station/Network</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Syndications</relationshipLabel>
        <relationshipName>Syndications</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Syndication</label>
    <nameField>
        <displayFormat>SYN-{0}</displayFormat>
        <label>Syndication Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Syndications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>